[gd_scene load_steps=4 format=3 uid="uid://b3l65vd7vkrod"]

[ext_resource type="Script" uid="uid://ma3r7dak8kl1" path="res://Subtitle/subtitle.gd" id="1_m3twq"]
[ext_resource type="FontFile" uid="uid://bytsugfxcmeoc" path="res://Subtitle/CaslonAntique.ttf" id="2_j6rrx"]
[ext_resource type="Texture2D" uid="uid://b0s3tfnc7cx85" path="res://UI/iranyiitaas.png" id="3_j6rrx"]

[node name="Subtitle" type="MarginContainer"]
offset_left = 460.0
offset_top = 961.0
offset_right = 1416.0
offset_bottom = 1125.0
script = ExtResource("1_m3twq")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.005
one_shot = true

[node name="DurationTimer" type="Timer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.038397167, 0.038397167, 0.03839716, 1)
theme_override_fonts/font = ExtResource("2_j6rrx")
theme_override_font_sizes/font_size = 22
vertical_alignment = 1
autowrap_mode = 3

[node name="Arrows" type="Sprite2D" parent="."]
visible = false
position = Vector2(485, 91)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_j6rrx")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
